src/helper.cpp - fix crash in setResourceColor

don't crash on empty collection ColorAttribute

BUG: 426906
FIXED-IN: 21.08.2